# aoc-web

./: Cargo.toml  Dockerfile  docker-compose.yaml  justfile
ci/: vars.yaml
ci/scripts/: check-msrv.sh  lint-and-test.sh
fixtures/: benchmarks.sql  participants.sql  summaries.sql
migrations/: 20231120010855_base.sql  20231125214109_participants.sql
src/: cli.rs  config.rs  error.rs  main.rs  server.rs
src/middleware/: auth.rs  mod.rs
src/models/: base.rs  benchmark.rs  error.rs  mod.rs  participant.rs  summary.rs
src/models/store/: error.rs  mod.rs
src/routes/: health.rs  mod.rs
src/routes/api/: benchmarks.rs  mod.rs  participants.rs  summaries.rs
