[package]
name = "aoc-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = "0.5.2"
async-trait = "0.1.71"
axum = { version = "0.6", features = ["headers", "macros"] }
clap = { version = "4.3", features = ["cargo", "derive", "env"] }
figment = { version = "0.10.10", features = ["env", "toml"] }
password-hash = { version = "0.5.0", features = ["alloc"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
sea-query = { version = "0.30.2", features = ["derive", "attr"] }
sea-query-binder = { version = "0.5", features = ["sqlx-postgres", "with-uuid"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time"] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.25", features = ["full"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
tracing = { version = "0.1.21", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.5", features = ["serde"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
mime = "0.3.17"
mockall = "0.11.4"
temp-env = "0.3.4"
tower = { version = "0.4.13", features = ["util"] }

[patch.crates-io]
# until https://github.com/launchbadge/sqlx/pull/2545 makes it into a release
sqlx-macros = { git = "https://github.com/launchbadge/sqlx.git", rev = "979a55da9d806385264af2bfee42030f081d564c" }
